# dotbot-firefox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE.txt  README.rst  dotbot_firefox.py  pyproject.toml  tox.ini
.github/workflows/: test.yaml
changelog.d/: 20220929_070011_kurtmckee.rst  20221008_194037_kurtmckee_fix_double_link_runs.rst  20230512_103013_kurtmckee_support_linux_flatpak.rst  20230523_072956_kurtmckee_updates.rst  20231103_080920_kurtmckee_introduce_detect_pythons.rst  20240812_105419_kurtmckee_update.rst  20250404_135953_kurtmckee_updates.rst  README.rst
requirements/: pip-tools.txt  pre-commit.in  pre-commit.txt  test.in
requirements/mypy/: cpython-3.10.txt  cpython-3.11.txt  cpython-3.12.txt  cpython-3.8.txt  cpython-3.9.txt  pyproject.toml  requirements.txt
requirements/test/: cpython-3.10.txt  cpython-3.11.txt  cpython-3.12.txt  cpython-3.8.txt  cpython-3.9.txt  pyproject.toml  requirements.txt
tests/: test_plugin.py
