[project]
name = "dotbot-firefox"
version = "1.1.0"
description = "Configure your Firefox profile(s) using dotbot"
authors = [
    { name = "Kurt McKee", email = "contactme@kurtmckee.org" },
]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/kurtmckee/dotbot-firefox"
requires-python = ">=3.9"
keywords = [
    "dotbot",
    "dotbot-plugin",
    "dotfiles",
    "firefox",
]
dependencies = [
    "dotbot >=1.20.1",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# coverage
# --------

[tool.coverage.run]
branch = true
parallel = true
data_file = ".tox/.coverage-data-files/.coverage"
source = [
    "dotbot_firefox",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
fail_under = 100


# flake8
# ------

[tool.flake8]
max-line-length = 80
extend-select = ["B950"]
extend-ignore = ["E203", "E501", "E701"]


# mypy
# ----

[tool.mypy]
packages = "dotbot_firefox"
strict = true
sqlite_cache = true

[[tool.mypy.overrides]]
module = [
    "dotbot.*",
    "pytest",
]
ignore_missing_imports = true


# pytest
# ------

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: project.version"
categories = [
    "Python support",
    "Added",
    "Removed",
    "Changed",
    "Fixed",
    "Development",
]
